envoy/envoy-local.yaml

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

node:
  cluster: service_demo
  id: test-demo

static_resources:
  listeners:
  - name: listener_0
    per_connection_buffer_limit_bytes: 67108864
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080      
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          use_remote_address: true
          xff_num_trusted_hops: 0
          skip_xff_append: false
          common_http_protocol_options:
            idle_timeout: 3600s # 1 hour
            #headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536 # 64 KiB
            initial_connection_window_size: 1048576 # 1 MiB
          stream_idle_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          request_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  path: "/api/demo"
                route:
                  cluster: "service_webhook"
                  prefix_rewrite: "/293a927e-c5da-43d4-8aed-71eedb685a8a"
                  auto_host_rewrite: true
            internal_only_headers:
            - isadmin 
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "test"
                  root_id: "demoFilter"
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: |
                      {
                       "clustername": "grpcserver",
                        "timeout": 5000
                      }
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "my_vm_id"
                    code:
                      local:
                        filename: "./wasm-filter/demo.wasm"
                    configuration: {}
          - name: envoy.filters.http.router

  clusters:
  - name: service_webhook
    connect_timeout: 2s
    per_connection_buffer_limit_bytes: 5242880
    type: LOGICAL_DNS
    dns_lookup_family: AUTO
    dns_lookup_family: "V4_ONLY"
    lb_policy: ROUND_ROBIN
    transport_socket:
      name: "envoy.transport_socket.tls"
      typed_config:
        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
        common_tls_context:
          tls_params:
            ecdh_curves: ["X25519", "P-256", "P-384", "P-521"]
        sni: "webhook.site"
    load_assignment:
      cluster_name: service_webhook
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "webhook.site"
                port_value: 443
  - name: grpcserver
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    connect_timeout: 5s
    dns_lookup_family: "V4_ONLY"
    per_connection_buffer_limit_bytes: 5242880
    load_assignment:
      cluster_name: grpcserver
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 50051
